--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gulp-sourcemaps": "^2.6.4",
     "gulp-uglify": "^3.0.1",
     "gulp-uglifycss": "^1.1.0",
-    "gulp-useref": "^3.1.5"
+    "gulp-useref": "^3.1.5",
+    "jquery": "^3.3.1"
   }
 }
