--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.1",
     "gulp-sourcemaps": "^2.6.4",
+    "gulp-template": "^5.0.0",
     "gulp-uglify": "^3.0.1",
     "gulp-uglifycss": "^1.1.0",
-    "gulp-useref": "^3.1.5",
     "jquery": "^3.3.1"
   }
 }
